--- a/Change-Password.html
+++ b/Change-Password.html
@@ -73,8 +73,8 @@
             } else {
                 massage.classList.remove('alert')
                 setTimeout(() => {
-                    window.location.href = './Home.html';
-                }, 2000); // الانتظار لمدة 2 ثانية قبل التوجيه
+                    window.location.href = './index.html'
+                }, 2000) // الانتظار لمدة 2 ثانية قبل التوجيه
             }
         }
 
