--- a/Login.html
+++ b/Login.html
@@ -53,7 +53,7 @@
             <div class="login--links">
                 <a href="./Register.html">Sign Up</a>
                 <span><b>OR</b></span>
-                <a href="./Home.html">Continue as Guest ..?</a>
+                <a href="./index.html">Continue as Guest ..?</a>
                 <br>
                 <span><b>Don't Remember Your Password ?</b></span>
                 <br>
