--- a/Register.html
+++ b/Register.html
@@ -76,7 +76,7 @@
             e.preventDefault();
             massage.textContent = 'Registration successful!';
             setTimeout(() => {
-                window.location.href = './Home.html';
+                window.location.href = './index.html';
             }, 2000); // الانتظار لمدة 2 ثانية قبل التوجيه
         }
 
