--- a/About.html
+++ b/About.html
@@ -100,7 +100,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid d-flex">
-                <a class="navbar-brand" href="Home.html"><i class="fa-solid fa-mug-saucer"></i>
+                <a class="navbar-brand" href="./index.html"><i class="fa-solid fa-mug-saucer"></i>
                     Palestine Cafe
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -111,7 +111,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./Home.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " href="./Menu.html">Menu</a>
