--- a/Menu.html
+++ b/Menu.html
@@ -122,7 +122,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid d-flex">
-                <a class="navbar-brand" href="#"><i class="fa-solid fa-mug-saucer"></i>Palestine Cafe</a>
+                <a class="navbar-brand" href=./index.html"><i class="fa-solid fa-mug-saucer"></i>Palestine Cafe</a>
                 <a class="navbar-toggler" type="a " data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -130,7 +130,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./Home.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="./Menu.html">Menu</a>
