--- a/Customer-Reviews.html
+++ b/Customer-Reviews.html
@@ -109,7 +109,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid d-flex">
                 <a class="navbar-brand" href="./index.html"><i class="fa-solid fa-mug-saucer"></i>
-                    <h1>Palestine Cafe</h1>
+                    Palestine Cafe
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
