--- a/Login.html
+++ b/Login.html
@@ -36,17 +36,17 @@
         <form class="login--form" action="#">
             <h1 class="login--title">Welcome to Palestine Cafe
             </h1>
-            <div class="form-floating mb-3 col-2">
+            <div class="form-floating sd mb-3 ">
                 <input type="email" class="form-control color" id="floatingInputDisabled" placeholder="name@example.com"
                     Required>
                 <label for="floatingInput">Email Adress</label>
             </div>
-            <div class="form-floating mb-3 col-2">
+            <div class="form-floating sd mb-3 ">
                 <input type="password" class="form-control color" id="floatingInputDisabled"
                     placeholder="name@example.com" Required>
                 <label for="floatingInputDisabled">Password</label>
             </div>
-            <button type="submit" class="btn btn-dark col-2">
+            <button type="submit" class="btn btn-dark ">
                 Submit
             </button>
             <h4>Don't have an account ?</h4>
@@ -62,9 +62,7 @@
             </div>
         </form>
     </main>
-    <footer>
-        <!-- place footer here -->
-    </footer>
+
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
