--- a/Login.html
+++ b/Login.html
@@ -46,7 +46,7 @@
                     placeholder="name@example.com" Required>
                 <label for="floatingInputDisabled">Password</label>
             </div>
-            <button type="submit" class="btn btn-dark ">
+            <button type="submit" class="btn btn-dark sd">
                 Submit
             </button>
             <h4>Don't have an account ?</h4>
