--- a/Register.html
+++ b/Register.html
@@ -42,27 +42,27 @@
     <main>
         <form class="register--form" id="submit">
             <h1 class="Register--title">Welcome to Palestine Cafe</h1>
-            <div class="form-floating mb-3 col-2">
+            <div class="form-floating mb-3 sd">
                 <input type="text" class="form-control color" id="ad" placeholder="name@example.com" Required>
                 <label for="ad">Username</label>
             </div>
-            <div class="form-floating mb-3 col-2">
+            <div class="form-floating mb-3 sd">
                 <input type="email" class="form-control color" id="ad" placeholder="name@example.com" Required>
                 <label for="ad">Email Adress</label>
             </div>
-            <div class="form-floating mb-3 col-2">
+            <div class="form-floating mb-3 sd">
                 <input type="number" class="form-control color" id="ad" placeholder="name@example.com" Required>
                 <label for="ad">Age</label>
             </div>
-            <div class="form-floating mb-3 col-2">
+            <div class="form-floating mb-3 sd">
                 <input type="password" class="form-control color" id="ad" placeholder="name@example.com" Required>
                 <label for="ad">Password</label>
             </div>
-            <div class="form-floating mb-3 col-2">
+            <div class="form-floating mb-3 sd">
                 <input type="password" class="form-control color" id="ad" placeholder="name@example.com" Required>
                 <label for="ad">Confirm Password</label>
             </div>
-            <button type="submit" class="btn btn-dark col-2">
+            <button type="submit" class="btn btn-dark sd">
                 Submit
             </button>
         </form>
