--- a/Book-Now.html
+++ b/Book-Now.html
@@ -106,9 +106,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid d-flex">
-                <a class="navbar-brand" href="./index.html"><i class="fa-solid fa-mug-saucer"></i>
-                    <h1>Palestine Cafe</h1>
-                </a>
+                <a class="navbar-brand" href="./index.html"><i class="fa-solid fa-mug-saucer"></i>Palestine Cafe</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -117,7 +115,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./Menu.html">Menu</a>
@@ -125,11 +123,26 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./About.html">About</a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link active" href="./Book-Now.html">Book Now</a>
+                            <a class="nav-link" href="./Book-Now.html">Book Now</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./FAQ.html">FAQ</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Easy Recipes
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./Drinks.html">Drinks</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./Desserts.html">Desserts</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -149,6 +162,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Contact Us</a>
                                 </li>
+
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -170,7 +184,6 @@
             </div>
         </nav>
     </header>
-
 
     <!-- Main Container -->
     <div class="container mb-5">
