--- a/Desserts.html
+++ b/Desserts.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ar">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palestine Cafe</title>
-
     <link rel="stylesheet" href="css/all.min.css">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
-
     <style>
         body {
-            /* بني غامق */
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            position: relative;
+            height: 100vh;
+            min-height: fit-content;
             margin: 0;
             padding: 0;
-            direction: ltr;
-
+            color: #333333;
         }
 
         body::before {
@@ -35,71 +36,25 @@
             z-index: -1;
         }
 
-        .head--title {
-            margin: 50px 0 30px;
+
+        .card img {
+            height: 200px;
+            object-fit: cover;
+        }
+
+
+
+        .container {
+            margin-top: 30px;
+        }
+
+        .w-b {
             color: #fdf6e1;
-            text-align: center;
+            text-shadow: #000 1px 0 10px;
         }
 
-        /* h1, */
-        h2 {
-            color: #fdf6e1;
-            /* بيج فاتح */
-            text-align: center;
-            /* النص يبقى في المنتصف */
-        }
-
-        .paragraph_text {
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #a57d68;
-            /* بني متوسط */
-            border-radius: 8px;
-            width: 90%;
-            max-width: 800px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .rating {
-            color: #6e3624;
-            /* بني غامق */
-            font-size: 18px;
-        }
-
-        button {
-            background-color: #d77a42;
-            /* برتقالي */
-            color: #fdf6e1;
-            /* بيج فاتح */
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            /*لتغيير شكل المؤشر للكتابه */
-        }
-
-        button:hover {
-            background-color: #6e3624;
-            /* بني غامق */
-        }
-
-        input,
-        textarea {
-            width: 100%;
-            padding: 8px;
-            margin: 5px 0;
-            border: 1px solid #6e3624;
-            /* بني غامق */
-            border-radius: 5px;
-            /* يستخدم لحواف دائرية قيمتها 5 بكسل*/
-        }
-
-        .pending-message {
-            margin-top: 10px;
-            color: #6e3624;
-            /* بني غامق */
-            font-weight: bold;
-            text-align: center;
+        .cont {
+            margin-bottom: 100px;
         }
     </style>
 </head>
@@ -134,7 +89,7 @@
                             <a class="nav-link" href="./FAQ.html">FAQ</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 Easy Recipes
                             </a>
@@ -148,7 +103,7 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 More
                             </a>
@@ -188,30 +143,50 @@
         </nav>
     </header>
 
-    <h1 class="head--title">Customer Reviews</h1>
-
-    <!-- إضافة رأي -->
-    <div class="paragraph_text">
-        <h2>Leave Comment</h2>
-        <form id="opinionForm">
-            <!--لاضافة حقل نص مكون من 4 اسطر لكتابه رأي المستخدم -->
-            <textarea placeholder="write your opinion..." id="userOpinion" rows="4" required></textarea>
-            <label for="rating">rate our service:(1-5)</label>
-            <input type="number" id="rating" min="1" max="5" required>
-            <button type="button" onclick=addOpinion()>Submit</button>
-        </form>
-    </div>
-
-    <!-- عرض الآراء -->
-    <div class="paragraph_text mb-5">
-        <h2>Testimonials From Our Customers</h2>
-        <div id="opinions">
-            <div class="paragraph_text">
-                <p>Excellent service!</p>
-                <p class="rating">rated: ⭐⭐⭐⭐</p>
+    <!-- محتوى الحلويات -->
+    <div class="container">
+        <h2 class="text-center w-b mb-4">Dessert Recipes</h2>
+        <div class="row g-4 cont">
+            <!-- Recipe 1 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://i.pinimg.com/736x/d9/0d/6a/d90d6a394669adaf1bc74a9e1581d0d5.jpg"
+                        class="card-img-top" alt="Cheesecake">
+                    <div class="card-body">
+                        <h5 class="card-title">Cheesecake</h5>
+                        <p class="card-text">Ingredients: Cream Cheese, Biscuits, Butter, Sugar.</p>
+                        <a href="./page/recipes/desserts_content/cheesecake.html" class="btn btn-dark">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Recipe 2 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://i.pinimg.com/236x/ef/00/33/ef00331632fe737dbda6c7f7b3e0eefd.jpg"
+                        class="card-img-top" alt="Chocolate Cookies">
+                    <div class="card-body">
+                        <h5 class="card-title">Chocolate Cookies</h5>
+                        <p class="card-text">Ingredients: Flour, Chocolate, Butter, Sugar.</p>
+                        <a href="./page/recipes/desserts_content/cookies.html" class="btn btn-dark">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Recipe 3 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://i.pinimg.com/736x/a6/62/76/a6627674e5aceeb636c760d5e23ba8f7.jpg"
+                        class="card-img-top" alt="Apple Cake">
+                    <div class="card-body">
+                        <h5 class="card-title">Apple Cake</h5>
+                        <p class="card-text">Ingredients: Apples, Flour, Sugar, Eggs.</p>
+                        <a href="./page/recipes/desserts_content/apple_pie.html" class="btn btn-dark">Read More</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
     <footer>
         <div>
             <p> &copy;2024 Palestine Cafe. All rights reserved.</p>
@@ -228,36 +203,9 @@
             </div>
         </div>
     </footer>
-    <script>
-        // إضافة رأي ودي دالة جافا لتنفيذ مجموعة من التعليمات
-        function addOpinion() {
-            const opinionText = document.getElementById('userOpinion').value;
-            const ratingValue = document.getElementById('rating').value;
-            if (opinionText && ratingValue >= 1 && ratingValue <= 5) {
-                const opinionContainer = document.getElementById('opinions');
-                const newOpinion = document.createElement('div');
-                newOpinion.classList.add('paragraph_text');
-                newOpinion.innerHTML = `
-                    <p>${opinionText}</p>
-                    <p class="rating">rated: ${'⭐'.repeat(ratingValue)}</p>
-                `;
-                opinionContainer.appendChild(newOpinion);
-                // إعادة تعيين رأي جديد
-                document.getElementById('opinionForm').reset();
 
-            } else {
-                alert("Please write your opinion for Submit!");
-            }
-        }
-
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
+    <!-- Bootstrap JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
