--- a/FAQ.html
+++ b/FAQ.html
@@ -106,6 +106,7 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid d-flex">
@@ -118,7 +119,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                            <a class="nav-link " aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./Menu.html">Menu</a>
@@ -126,11 +127,26 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./About.html">About</a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link " href="./Book-Now.html">Book Now</a>
+                            <a class="nav-link" href="./Book-Now.html">Book Now</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="./FAQ.html">FAQ</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Easy Recipes
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./Drinks.html">Drinks</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./Desserts.html">Desserts</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -150,6 +166,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Contact Us</a>
                                 </li>
+
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -171,6 +188,7 @@
             </div>
         </nav>
     </header>
+
     <!-- طرح سؤال -->
     <div>
         <h1 class="head--title">Leave a Question ...?</h1>
