--- a/Book-Now.html
+++ b/Book-Now.html
@@ -115,7 +115,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                            <a class="nav-link " aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./Menu.html">Menu</a>
@@ -125,7 +125,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="./Book-Now.html">Book Now</a>
+                            <a class="nav-link active" href="./Book-Now.html">Book Now</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./FAQ.html">FAQ</a>
