--- a/Change-Password.html
+++ b/Change-Password.html
@@ -41,19 +41,19 @@
 <body>
     <section>
         <form class="register--form" id="submit">
-            <div class="form-floating mb-3 col-2">
+            <div class="form-floating mb-3 sd">
                 <input type="password" class="form-control color" id="ad" placeholder="name@example.com" Required>
                 <label for="ad">Old Password</label>
             </div>
-            <div class="form-floating mb-3 col-2">
+            <div class="form-floating mb-3 sd">
                 <input type="password" class="form-control color s" id="ad" placeholder="name@example.com" Required>
                 <label for="ad">New Password</label>
             </div>
-            <div class="form-floating mb-3 col-2">
+            <div class="form-floating mb-3 sd">
                 <input type="password" class="form-control color s" id="ad" placeholder="name@example.com" Required>
                 <label for="ad">Confirm New Password</label>
             </div>
-            <button type="submit" class="btn btn-dark col-2">
+            <button type="submit" class="btn btn-dark sd">
                 Submit
             </button>
         </form>
